KQED -/src/objects/Vendor_Exports__c.object
<CustomObject>
    <description>List of  pulls generated to send to vendors</description>
    <fields>
        <fullName>Last_Run__c</fullName>
        <label>Last Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pull_Name__c</fullName>
        <label>Pull Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Pull_Type__c</fullName>
        <label>Pull Type</label>
        <picklist>
            <picklistValues>
                <fullName>Premium Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acknowledgements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reminders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guide Pulls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membercard Pulls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask Amount Updates</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Vendor Exports</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Pull_Name__c</columns>
        <columns>Pull_Type__c</columns>
        <columns>Last_Run__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <groups>Sys Admin</groups>
            <groups>WGBH Audience &amp; Member Services</groups>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Export Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Exports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>